# Traitement_d_images_et_de_videos_avec_OpenCV3

./: README.md  installCeresVTk.sh  installExemple.sh  installOCV.sh  installTesseract.sh
Ch4Canny/: CMakeLists.txt  canny.cpp
Ch4Grabcut/: CMakeLists.txt
Ch4KMeans/: main.cpp
Ch4Watershed/: CMakeLists.txt
Ch5PanoCam/: CMakeLists.txt
Ch6Stereo/: main.cpp
ch10ml/: CMakeLists.txt  formes.yml  main.cpp
ch2ex1/: CMakeLists.txt  main.cpp
ch2ex2/: CMakeLists.txt  main.cpp
ch2ex3/: CMakeLists.txt  main.cpp  test.xml
ch3ex1/: CMakeLists.txt  main.cpp
ch3ex2/: CMakeLists.txt  main.cpp
ch3ex3/: CMakeLists.txt  main.cpp
ch4Canny/: CMakeLists.txt  canny.cpp
ch4Grabcut/: CMakeLists.txt  grabcut.cpp
ch4KMeans/: CMakeLists.txt  main.cpp
ch4Seuillage/: CMakeLists.txt  main.cpp
ch4Watershed/: CMakeLists.txt  watershed.cpp
ch5PanoCam/: CMakeLists.txt  main.cpp
ch6Stereo/: CMakeLists.txt  main.cpp
ch7SFM/: CMakeLists.txt  main.cpp
ch7SFM/DataSFM/: ImagesSFM1.yml
ch8ocr_ex1/: CMakeLists.txt  main.cpp
ch8ocr_ex2/: CMakeLists.txt  main.cpp
ch9FacialeBase/: CMakeLists.txt  main.cpp
ch9FacialeVideo/: CMakeLists.txt  main.cpp
